# teammarusya-deploy

./: .gitattributes  .gitignore  README.md
backend/: Dockerfile  download_models.sh  pyproject.toml
backend/code/klikbait/: README.md  predict.py  pyproject.toml
backend/code/klikbait/my_awesome_model/checkpoint-113/: model.safetensors  tokenizer.json
backend/code/water/: index.ipynb  logreg_water_model.pkl  pyproject.toml  requirements.txt  ruber_quality_model.pkl  water_analyzer.py
backend/models/clickbait/checkpoint-113/: config.json
backend/src/api/: app.py  main.py  routes.py  routes_clickbait.py  routes_water.py  schemas.py  schemas_clickbait.py  schemas_water.py
backend/src/cli/: analyze.py
backend/src/lib/: clickbait_config.py  determinism.py  water_config.py
backend/src/services/: analyzer.py  clickbait_detector.py  fetcher.py  parser_adapter.py  sentiment_adapter.py  water_detector.py
frontend/: Dockerfile
frontend/app/: layout.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/app/api/clickbait/: route.ts
frontend/app/api/water-detection/: route.ts
frontend/app/components/: AnalysisResult.tsx  AnalyzeForm.tsx  AnalyzePageClient.tsx  ClickbaitBadge.tsx  WaterBadge.tsx
