[project]
name = "klikbait"
version = "0.1.0"
description = "Clickbait detection for news titles using rubert-tiny2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers[torch]>=4.30.0",
    "torch==2.4.0+cpu",
    "torchvision==0.19.0+cpu",
    "torchaudio==2.4.0+cpu",
    "datasets>=2.14.0",
    "accelerate>=1.11.0",
    "evaluate>=0.4.0",
    "spacy>=3.7.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }  
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
